# Photorealistic-Rendering-using-OpenCL

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Changelog.md  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: FindFreeImage.cmake
include/: CL_Objects.h  align.h  header.h  material.h  string_helper_functions.h  utils.h
include/BVH/: bvh.h  new_bvh.h
include/CL/: cl_help.h  cl_kernel.h  cl_program.h
include/Camera/: camera.h
include/GL/: cl_gl_interop.h  user_interaction.h
include/Math/: MathHelp.h  linear_algebra.h  random.h
include/Model/: model_loader.h  obj_parser.h
include/Scene/: geometry.h  scene.h
include/Texture/: lodepng.h  texture.h
include/Types/: CL_Objects.h  material.h  media.h  params.h
kernels/: bvh.cl  camera.cl  header.cl  intersect.cl  main.cl  media.cl  texture.cl  utils.cl
kernels/bxdf/: Fresnel.cl  beckmann.cl  blinn.cl  burley_diffuse.cl  bxdf.cl  diffuse.cl  ggx.cl  microfacet.cl
kernels/bxdf/Materials/: Coat.cl  Conductor.cl  Dielectric.cl  Lambert.cl  RoughConductor.cl  RoughDielectric.cl
kernels/bxdf/microfacet/: ggx.cl
kernels/bxdf/old/: blinn.cl
kernels/geometry/: aabb.cl  box.cl  bvh.cl  geometry.cl  quad.cl  sdf.cl  sphere.cl  triangle.cl
kernels/integrators/: base.cl  bidirectional.cl  pathtracing.cl
kernels/media/: exponential.cl  homogeneous.cl
kernels/noise/: value_noise.cl
kernels/phasefunctions/: HenyeyGreenstein.cl  Isotropic.cl  Rayleigh.cl
kernels/prng/: prng.cl
resources/hdr/: README.md  blue_grotto_8k.hdr  vignaioli_night_8k.hdr
scenes/: cornell.json  cornell_media.json  test.json
shaders/: tonemapper.glsl  vert.glsl
src/: main.cpp
src/BVH/: bvh.cpp
src/Camera/: camera.cpp
src/Math/: MathHelp.cpp  linear_algebra.cpp
src/Models/: model_loader.cpp  obj_parser.cpp
src/Texture/: lodepng.cpp
